--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -35,9 +35,9 @@ jobs:
 
       - name: Run pytest in the 'tests' folder
         run: |
-          pytest tests -v --junit-xml=test-results/junit.xml
+          pytest tests -v --junit-xml=test-results/pytest.xml
 
-      - name: Test Report JDK ${{ matrix.java-version }}
+      - name: Test Report
         uses: dorny/test-reporter@31a54ee7ebcacc03a09ea97a7e5465a47b84aea5 # v1
         if: (success() || failure()) && github.event_name != 'pull_request' && github.actor != 'dependabot[bot]'  # run this step even if previous step failed
         with:
