--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-asyncio pytest-timeout docker websocket-client pyserial
+          pip install -r tests/requirements.txt
 
       - name: Run pytest in the 'tests' folder
         run: |
