--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run pytest in the 'tests' folder
         run: |
-          pytest tests -v --junit-xml=test-results/pytest.xml
+          behave tests
 
       - name: Test Report
         uses: dorny/test-reporter@31a54ee7ebcacc03a09ea97a7e5465a47b84aea5 # v1
