settings SKETCH_FILE env var

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,6 +24,8 @@ jobs:
           pip install -r tests/requirements.txt
 
       - name: Run pytest in the 'tests' folder
+        env:
+          SKETCH_FILE=ArdulinkProtocol/ArdulinkProtocol.ino
         run: |
           behave tests
 
