text changed from pytest to behave

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -23,7 +23,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r tests/requirements.txt
 
-      - name: Run pytest in the 'tests' folder
+      - name: Run behave in the 'tests' folder
         env:
           SKETCH_FILE: ArdulinkProtocol/ArdulinkProtocol.ino
         run: |
