--- a/tests/behave.ini
+++ b/tests/behave.ini
@@ -3,3 +3,6 @@ verbose = true
 junit = true
 junit_directory = test-results
 
+[behave.formatters]
+html-pretty = behave_html_pretty_formatter:PrettyHTMLFormatter
+
