--- a/.github/workflows/compile-and-test-firmware.yml
+++ b/.github/workflows/compile-and-test-firmware.yml
@@ -30,6 +30,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
@@ -55,6 +56,6 @@ jobs:
       - name: Save hex-artifact
         uses: actions/upload-artifact@v4
         with:
-          name: uno-hex
+          name: ardulink-firmware-uno
           path: ArdulinkProtocol/ArdulinkProtocol.ino.hex
 
