--- a/.github/workflows/compile-and-test-firmware.yml
+++ b/.github/workflows/compile-and-test-firmware.yml
@@ -23,6 +23,7 @@ jobs:
 
   compile:
     runs-on: ubuntu-latest
+    needs: setup
 
     steps:
       - name: Compile Arduino Sketch
@@ -37,6 +38,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    needs: compile
 
     steps:
       - name: Set up Python
