upload: match ino-file as well

--- a/.github/workflows/compile-and-test-firmware.yml
+++ b/.github/workflows/compile-and-test-firmware.yml
@@ -60,5 +60,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ardulink-firmware-uno
-          path: ArdulinkProtocol/ArdulinkProtocol.ino.hex
+          path: |
+            ArdulinkProtocol/ArdulinkProtocol.ino
+            ArdulinkProtocol/ArdulinkProtocol.ino.hex
 
