--- a/.github/workflows/release-firmware.yml
+++ b/.github/workflows/release-firmware.yml
@@ -3,6 +3,10 @@ name: Release Firmware
 on:
   release:
     types: [published]
+  workflow_run:
+    workflows: ["Compile Arduino Sketch"]
+    types:
+      - completed
 
 jobs:
   release:
