create release on push of version tag

--- a/.github/workflows/release-firmware.yml
+++ b/.github/workflows/release-firmware.yml
@@ -1,9 +1,10 @@
 name: Release Firmware
 
 on:
-  release:
-    types: [published]
-
+  push:
+    tags:
+      - 'v*'
+    
 jobs:
   compile_and_test:
     uses: ./.github/workflows/compile-and-test-firmware.yml
