--- a/.github/workflows/release-firmware.yml
+++ b/.github/workflows/release-firmware.yml
@@ -19,6 +19,13 @@ jobs:
           name: ardulink-firmware-uno
           path: ardulink-firmware-uno.zip
 
+      - name: Print current working directory
+        run: pwd
+      - name: List files in the working directory
+        run: ls -al .
+      - name: Find
+        run: find .
+
       - name: Unzip artifact
         run: unzip ardulink-firmware-uno.zip -d ./ArdulinkProtocol
 
