--- a/.github/workflows/compile-and-test-firmware.yml
+++ b/.github/workflows/compile-and-test-firmware.yml
@@ -42,7 +42,7 @@ jobs:
         env:
           SKETCH_FILE: ArdulinkProtocol/ArdulinkProtocol.ino.hex
         run: |
-          behave -f pretty tests
+          behave --junit --junit-directory ./test-results -f pretty tests
 
       - name: Test Report
         uses: dorny/test-reporter@6e6a65b7a0bd2c9197df7d0ae36ac5cee784230c # v1
